package br.unitins.topicos1.floricultura.dto;

public record AdminDTO(
    Long usuario
) {
    
}
